# embeddedTask

./: .gitignore  README.md
C/: CMakeLists.txt  main.c  rebuild.sh
C/include/: adc.h  eeprom.h  gpio.h  i2c.h  led.h  mcu_registers.h  statemachine.h
C/src/: adc.c  eeprom.c  gpio.c  i2c.c  led.c  mcu_registers.c  statemachine.c
Cxx/: CMakeLists.txt  main.cpp
Cxx/include/: configurator.hpp  statusindicator.hpp  temperaturevisualizer.hpp  thermometer.hpp
Cxx/src/: configurator.cpp  statusindicator.cpp  temperaturevisualizer.cpp  thermometer.cpp
docs/: assumptions.txt
docs/plantuml/: C_ActivityDiagram.plantuml  C_ComponentDiagram.plantuml  C_SequenceDiagram.plantuml  Cxx.plantuml  Cxx_ClassDiagram.plantuml  Cxx_ComponentDiagram.plantuml  Cxx_SequenceDiagramAbstract.plantuml  Cxx_SequenceDiagramDetailed.plantuml
